# kameo-persistence

./: README.md  cargo.toml
kameo-persistence/: Cargo.toml
kameo-persistence-macros/: Cargo.toml
kameo-persistence-macros/src/: lib.rs
kameo-persistence/examples/: persistence.rs
kameo-persistence/src/: bi_hash_map.rs  lib.rs  persistent_actor.rs
kameo-persistence/tests/: derive_persistent_actor.rs  derive_persistent_actor_with_custom_snapshot.rs  Ï
persistent-kameo/: Cargo.toml
persistent-kameo-macros/: Cargo.toml
persistent-kameo-macros/src/: lib.rs
persistent-kameo/src/: lib.rs  persistent_actor.rs
persistent-kameo/tests/: derive_persistent_actor.rs
