[package]
name = "kameo-persistence-macros"
version = "0.1.0"
edition = "2024"
authors = ["lighthouse <cwahn0904@gmail.com>"]
description = "Macros for persistence add-on for Kameo, a Rust actor framework"
license = "MIT"
repository = "https://github.com/cwahn/kameo-persistence.git"

[lib]
proc-macro = true

[dependencies]
proc-macro2 = "1.0"
quote = "1.0"
syn = { version = "2.0", features = ["full", "extra-traits"] }

# Optional: for better error messages
proc-macro-error = "1.0"
heck = "0.5.0"
