[package]
name = "persistent-kameo"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.98"
kameo = "0.17.2"
postcard = { version = "1.1.2", features = ["use-std"] }
serde = { version = "1.0.219", features = ["derive"] }
url = { version = "2.5.4", features = ["serde"] }
persistent-kameo-macros = { path = "../persistent-kameo-macros" }

tracing = { version = "0.1.41", optional = true }

[dev-dependencies]
trybuild = "1.0"
futures = "0.3.30"

[features]
default = []
tracing = ["dep:tracing"]
